ci(semantic-release): install required extra plugins

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,12 @@ jobs:
         uses: cycjimmy/semantic-release-action@v4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          extra_plugins: |
+            - @semantic-release/release-notes-generator
+            - @semantic-release/changelog
+            - @semantic-release/github
+            - conventional-changelog-conventionalcommits
 
     outputs:
       new_release_published: ${{ steps.semantic-release.outputs.new_release_published }}
